cluster/apps/media/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - name: radarr
          image: "linuxserver/radarr:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            failureThreshold: 6
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
          resources:
            limits:
              cpu: 1000m
              memory: 750Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          nfs:
            server: 10.20.30.40
            path: "/volume1/Multimedia"
